# ClientSide

./: .gitignore  Cargo.toml  README.md  SERVER_REF
examples/: prototype_async.rs  prototype_https.rs  prototype_mixed_dispatch.rs
src/: lib.rs  main.rs
src/domain/: auth.rs  chat.rs  mod.rs  user.rs
src/page/: fatal_page.rs  lobby_page.rs  login_page.rs  mod.rs  network.rs  route.rs  shutdown_page.rs  signup_page.rs  update.rs  view.rs
src/protocol/network/: mod.rs  network.rs  network_impl.rs  worker.rs
src/shell/: args.rs  eframe_shell.rs  mod.rs
