[package]
name = "client_side"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.98" }
base64 = { version = "0.22.1" }
clap = { version = "4.5.37", features = ["derive"] }
crossbeam-channel = { version = "0.5.15" }
dashmap = { version = "7.0.0-rc2" }
eframe = { version = "0.31.1" }
image = { version = "0.25.6" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44", features = ["full"] }
tokio-util = { version = "0.7.15" }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
