[package]
name = "client_side"
version = "0.1.0"
edition = "2021"

[features]
manual-test = []

[dependencies]
anyhow = { version = "1.0.98" }
async-trait = { version = "0.1.88" }
base64 = { version = "0.22.1" }
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.37", features = ["derive"] }
crossbeam-channel = { version = "0.5.15" }
dashmap = { version = "7.0.0-rc2" }
eframe = { version = "0.31.1" }
futures-util = { version = "0.3.31" }
image = { version = "0.25.6" }
once_cell = { version = "1.21.3" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
rustls = { version = "0.23.28", features = ["std"] }
rustls-pemfile = { version = "2.2.0" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
tokio = { version = "1.44", features = ["full"] }
tokio-tungstenite = { version = "0.27.0", features = ["connect", "rustls-tls-native-roots", "native-tls", "url"] }
tokio-util = { version = "0.7.15" }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = { version = "2.5.4" }
uuid = { version = "1.17.0", features = ["v4", "v5", "serde"] }
